# QuadraBass

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  README.md
docs/plans/: 2026-02-24-quadrabass-init-design.md  2026-02-24-quadrabass-initialization.md  2026-02-24-quadrabass-phase2-design.md  2026-02-24-quadrabass-phase2-execution-log.md  2026-02-24-quadrabass-phase2-implementation.md  2026-02-25-quadrabass-phase2-timeline.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: BandSplitProcessor.cpp  BandSplitProcessor.h  HilbertProcessor.cpp  HilbertProcessor.h  HilbertQuadratureProcessor.cpp  HilbertQuadratureProcessor.h  StereoMatrixProcessor.cpp  StereoMatrixProcessor.h
src/ui/: CorrelationMeter.cpp  CorrelationMeter.h  GoniometerComponent.cpp  GoniometerComponent.h  StereometerComponent.cpp  StereometerComponent.h
src/util/: Params.cpp  Params.h
tests/: BandSplitProcessorTests.cpp  DspComplianceTests.cpp  HilbertQuadratureTests.cpp  InitTests.cpp  ParamLayoutTests.cpp  StereoMatrixTests.cpp  VisualizerMathTests.cpp
